--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+body {
+	padding: 0;
+	margin: 0;
+	font-family: "Arial";
+}
+
 .nav {
     background-color: lightpink;
     height: 60px;
@@ -17,11 +23,13 @@
 }
 
 .sidebar {
+	box-sizing: border-box;
 	float: left;
 	background-color: turquoise;
 	width: 20%;
 	height: 400px;
 	border: 3px solid black;
+	padding: 10px 30px;
 }
 
 .buttonFilter {
@@ -36,12 +44,12 @@
 .yellowContent {
 	background-color: lemonchiffon;
 	float: right;
-	width: 77.5%;
+	width: 78%;
 	height: 400px;
 	border: 3px solid black;
+	padding: 10px 30px;
+	box-sizing: border-box;
 }
-
-
 
 
 
